Bye-world/deployment.yml
# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-bye-world
  namespace: app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-bye-world
  template:
    metadata:
      labels:
        app: test-bye-world
    spec:
      containers:
        - name: test-bye-world
          image: k8s.gcr.io/echoserver:1.4
          ports:
            - containerPort: 8080
              protocol: TCP
