Bye-world/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bye-world
  namespace: app-1
  labels:
    app: bye-world
  annotations:
    konghq.com/plugins: rate-limit-test
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    
  selector:
    app: test-bye-world
